spec/e2e/number/decimal_point_at_eof.lit
# error: [line 2] Error at ".": I was expecting a semicolon after the expression.
123.
